# CineRadar

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SPEC.md  firestore.rules  geocode_places.py  geocode_theatres.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  populate_firestore.py  pyproject.toml  pytest.ini  requirements.txt  tix_api.py  tix_api_client.py
.agent/workflows/: add-new-city.md  debug-failed-scrape.md  fix-lockfile.md  run-local-scrape.md  test-local-ui.md
.github/: dependabot.yml
.github/workflows/: admin-ci.yml  ci.yml  cinepoint-sync.yml  daily-scrape.yml  daily-summary.yml  failure-reporter.yml  jit-seats.yml  monthly-geocode.yml  pr-checks.yml  seat-jit-scrape.yml  security-scan.yml  smoke-tests.yml  test-firestore.yml  token-refresh.yml
admin/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
backend/: __init__.py  mock_cineradar.db  mock_data_generator.py
backend/application/: __init__.py
cinepoint-spider/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
data/: auth_request_details.json  cities.json  geocode_cache.json  live_seat_snapshot.json  movies_2025-12-11.json  movies_2025-12-12.json  movies_2025-12-14.json  movies_2025-12-17.json  movies_2025-12-18.json  movies_2025-12-19.json  movies_2025-12-23.json  movies_latest.json  places_cache.json  seats_morning_2025-12-17_0410.json  seats_morning_2025-12-17_0414.json  seats_morning_2025-12-17_0417.json  seats_morning_2025-12-17_0421.json  seats_morning_2025-12-17_0422.json  seats_morning_2025-12-17_0424.json  seats_morning_2025-12-17_0429.json  seats_morning_2025-12-17_0432.json  seats_morning_2025-12-17_0434.json  seats_morning_2025-12-17_0436.json  seats_morning_2025-12-17_0450.json  seats_morning_2025-12-17_0452.json  seats_morning_2025-12-23.json
docs/: 01_architecture_and_design.md  02_manual_setup.md  03_daily_pipeline.md  04_api_reference.md  05_frontend_guidelines.md  06_troubleshooting.md  07_product_roadmap.md  DAILY_PIPELINE.md  DATABASE_SCHEMA.md  README.md  SEAT_SCRAPER.md  TECHNICAL_DEBT.md  api_reference.md  architecture.md  frontend_guidelines.md  manual_setup.md  product_roadmap.md  troubleshooting.md
firebase/: .firebaserc  firebase.json  firestore.rules
scraper/: __init__.py  __main__.py  cloud_runner.py  config.py  firestore_client.py  tix_client.py
tests/: test_domain_errors.py  test_domain_models.py  test_infrastructure.py  test_repositories.py  test_smoke.py  test_upload_schedules.py  test_use_cases.py
web/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+198 files in other folders)
